add getallproduct when accessing endpoint /product
